# audic

./: .gitignore  README.md  audic.cabal  dictionary.db
app/: Main.hs
src/: Main.hs
src/Api/: Core.hs
src/Audic/: App.hs  Core.hs  Types.hs  Web.hs
src/Audic/Core/: Server.hs
src/Audic/Web/: Handlers.hs  Routes.hs  Style.hs  Views.hs
src/Audic/Web/Handlers/: Index.hs  Lookup.hs  Words.hs
src/Audic/Web/Views/: Components.hs  Index.hs  Lookup.hs  Words.hs
src/Frontend/: Core.hs
