cabal-version:      3.0
name:               audic
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             yamyard, Mrjt
maintainer:         yamyard<yamyard@hotmail.com>, Mrjt<meritamen@sdf.org>
category:           Dictionary
build-type:         Simple

executable audic
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , servant
                    , servant-server
                    , servant-blaze
                    , blaze-html
                    , warp
                    , wai
                    , text
                    , aeson
                    , http-conduit
                    , http-client
                    , persistent
                    , persistent-sqlite
                    , persistent-template
                    , monad-logger
                    , time
                    , resource-pool
                    , aeson
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
