cabal-version:      3.0
name:               audic
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Mrjt, yamyard
maintainer:         Mrjt<meritamen@sdf.org>, yamyard<yamyard@hotmail.com>
category:           Dictionary
build-type:         Simple

executable audic
    main-is:          Main.hs
    build-depends:    aeson
                    , base ^>=4.21.0.0
                    , blaze-html
                    , http-client
                    , http-conduit
                    , monad-logger
                    , persistent
                    , persistent-sqlite
                    , persistent-template
                    , resource-pool
                    , servant
                    , servant-blaze
                    , servant-server
                    , text
                    , time
                    , wai
                    , warp
    hs-source-dirs:   src
    other-modules:    Api.Core
                    , Frontend.Core
    default-language: GHC2024
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
